--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-markdown": "^3.0.0",
     "eslint-plugin-node-dependencies": "^0.10.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-security": "^1.7.1",
     "eslint-plugin-toml": "^0.4.0",
     "eslint-plugin-vue": "^9.10.0",
     "eslint-plugin-yml": "^1.2.0",
