--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "fflate": "^0.8.0",
     "shine-and-bright": "^0.2.0",
     "vue": "^3.2.47",
+    "xterm": "^5.2.1",
+    "xterm-addon-fit": "^0.7.0",
     "yaml": "^2.2.1"
   },
   "devDependencies": {
