--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,10 +11,7 @@
     "toml",
     "vue"
   ],
-  "editor.formatOnSave": true,
-  "[typescript]": {
-    "editor.formatOnSave": false
-  },
+  "editor.formatOnSave": false,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.codeActionsOnSave": {
     "source.fixAll": true,
