Also lint .csv files for cds

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
   "eslint.validate": [
+    "cds",
+    "csv",
+    "csv (semicolon)",
     "javascript",
     "javascriptreact",
     "typescript",
