--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@vitejs/plugin-vue": "^5.0.0",
     "eslint": "^9.5.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-jsdoc": "^48.2.12",
     "eslint-plugin-json-schema-validator": "^5.0.0",
     "eslint-plugin-jsonc": "^2.4.0",
     "eslint-plugin-markdown": "^5.0.0",
