--- a/package.json
+++ b/package.json
@@ -35,15 +35,16 @@
     "yaml": "^2.2.1"
   },
   "devDependencies": {
-    "@ota-meshi/eslint-plugin": "^0.15.0",
+    "@ota-meshi/eslint-plugin": "^0.17.1",
     "@types/eslint": "^8.21.3",
     "@types/eslint-scope": "^3.7.4",
     "@types/eslint-utils": "^3.0.2",
     "@types/node": "^20.0.0",
-    "@typescript-eslint/eslint-plugin": "^7.0.0",
+    "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@vitejs/plugin-vue": "^5.0.0",
-    "eslint": "^8.37.0",
+    "eslint": "^9.5.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-jsdoc": "^48.2.12",
     "eslint-plugin-json-schema-validator": "^5.0.0",
     "eslint-plugin-jsonc": "^2.4.0",
     "eslint-plugin-markdown": "^5.0.0",
