--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview",
     "open-site": "npx http-server ./build",
     "lint": "eslint .",
-    "lint-fix": "eslint . --fix"
+    "lint-fix": "eslint . --fix",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "repository": {
     "type": "git",
@@ -44,6 +46,7 @@
     "@types/node": "^22.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@vitejs/plugin-vue": "^5.0.5",
+    "@vitest/coverage-v8": "^3.0.4",
     "eslint": "^9.5.0",
     "eslint-config-prettier": "^10.0.0",
     "eslint-plugin-jsdoc": "^50.0.0",
@@ -59,6 +62,7 @@
     "monaco-editor": "^0.52.0",
     "typescript": "^5.5.2",
     "vite": "^6.0.0",
+    "vitest": "^3.0.4",
     "vue-eslint-parser": "^9.4.3",
     "vue-tsc": "^2.0.22"
   }
