--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
   },
   "homepage": "https://github.com/ota-meshi/eslint-online-playground#readme",
   "dependencies": {
+    "@babel/parser": "^7.26.7",
     "@eslint-community/eslint-utils": "^4.4.0",
     "@ota-meshi/site-kit-monarch-syntaxes": "^0.7.0",
     "@webcontainer/api": "^1.2.0",
     "ansi-regex": "^6.1.0",
-    "code-red": "^1.0.4",
     "eslint-scope": "^8.0.1",
+    "esrap": "^1.4.3",
     "fflate": "^0.8.2",
     "shine-and-bright": "^0.3.0",
     "vue": "^3.4.30",
