--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "@types/eslint-scope": "^3.7.7",
     "@types/eslint-utils": "^3.0.5",
     "@types/node": "^22.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vitest/coverage-v8": "^3.0.4",
     "eslint": "^9.5.0",
@@ -62,6 +61,7 @@
     "eslint-plugin-yml": "^1.14.0",
     "monaco-editor": "^0.52.0",
     "typescript": "^5.5.2",
+    "typescript-eslint": "^8.26.0",
     "vite": "^6.0.0",
     "vitest": "^3.0.4",
     "vue-eslint-parser": "^10.0.0",
