--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "eslint-scope": "^8.0.1",
     "esrap": "^1.4.3",
     "fflate": "^0.8.2",
+    "monaco-textmate": "^3.0.1",
+    "onigasm": "^2.2.5",
     "shine-and-bright": "^0.3.0",
     "vue": "^3.4.30",
     "xterm": "^5.3.0",
@@ -59,7 +61,7 @@
     "eslint-plugin-toml": "^0.12.0",
     "eslint-plugin-vue": "^10.0.0",
     "eslint-plugin-yml": "^1.14.0",
-    "monaco-editor": "^0.52.0",
+    "monaco-editor": "^0.52.2",
     "typescript": "^5.5.2",
     "typescript-eslint": "^8.26.0",
     "vite": "^6.0.0",
