uses shikijs for syntax highlighting

--- a/package.json
+++ b/package.json
@@ -27,14 +27,14 @@
   "dependencies": {
     "@babel/parser": "^7.26.7",
     "@eslint-community/eslint-utils": "^4.4.0",
-    "@ota-meshi/site-kit-monarch-syntaxes": "^0.7.0",
+    "@ota-meshi/site-kit-monarch-syntaxes": "^0.7.3",
+    "@shikijs/monaco": "^3.2.1",
     "@webcontainer/api": "^1.2.0",
     "ansi-regex": "^6.1.0",
     "eslint-scope": "^8.0.1",
     "esrap": "^1.4.3",
     "fflate": "^0.8.2",
-    "monaco-textmate": "^3.0.1",
-    "onigasm": "^2.2.5",
+    "shiki": "^3.2.1",
     "shine-and-bright": "^0.3.0",
     "vue": "^3.4.30",
     "xterm": "^5.3.0",
