--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@ota-meshi/eslint-plugin": "^0.17.4",
     "@types/eslint-scope": "^8.3.0",
     "@types/node": "^22.0.0",
+    "@unocss/preset-icons": "^66.2.3",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vitest/coverage-v8": "^3.0.4",
     "eslint": "^9.27.0",
@@ -62,6 +63,7 @@
     "monaco-editor": "^0.52.2",
     "typescript": "^5.5.2",
     "typescript-eslint": "^8.29.1",
+    "unocss": "^66.2.3",
     "vite": "^6.0.0",
     "vitest": "^3.0.4",
     "vue-eslint-parser": "^10.0.0",
