--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -7,6 +7,7 @@
     "src/**/*.tsx",
     "src/**/*.vue",
     "test/**/*.ts",
-    "vite.config.ts"
+    "vite.config.ts",
+    "uno.config.ts"
   ]
 }
