--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@ota-meshi/site-kit-monarch-syntaxes": "^0.7.3",
     "@shikijs/monaco": "^3.2.1",
     "@webcontainer/api": "^1.2.0",
+    "@xterm/addon-fit": "^0.10.0",
+    "@xterm/xterm": "^5.5.0",
     "ansi-regex": "^6.1.0",
     "eslint-scope": "^9.0.0",
     "esrap": "^2.0.0",
@@ -37,8 +39,6 @@
     "shiki": "^3.2.1",
     "shine-and-bright": "^0.3.0",
     "vue": "^3.4.30",
-    "xterm": "^5.3.0",
-    "xterm-addon-fit": "^0.8.0",
     "yaml": "^2.4.5"
   },
   "devDependencies": {
