--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@ota-meshi/eslint-plugin": "^0.20.0",
     "@types/eslint-scope": "^8.3.0",
     "@types/node": "^24.0.0",
+    "@typescript-eslint/parser": "^8.55.0",
     "@unocss/preset-icons": "^66.2.3",
     "@vitejs/plugin-vue": "^6.0.0",
     "@vitest/coverage-v8": "^4.0.0",
@@ -54,19 +55,20 @@
     "eslint-plugin-json-schema-validator": "^6.0.0",
     "eslint-plugin-jsonc": "^2.20.1",
     "eslint-plugin-markdown": "^5.0.0",
-    "eslint-plugin-node-dependencies": "^1.0.0",
+    "eslint-plugin-node-dependencies": "^1.3.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-security": "~3.0.1",
     "eslint-plugin-toml": "^1.0.0",
-    "eslint-plugin-vue": "^10.0.0",
+    "eslint-plugin-vue": "^10.7.0",
     "eslint-plugin-yml": "^3.0.0",
+    "globals": "^17.3.0",
     "monaco-editor": "^0.55.0",
     "typescript": "^5.5.2",
-    "typescript-eslint": "^8.29.1",
+    "typescript-eslint": "^8.55.0",
     "unocss": "^66.2.3",
     "vite": "^7.0.0",
     "vitest": "^4.0.0",
-    "vue-eslint-parser": "^10.0.0",
+    "vue-eslint-parser": "^10.2.0",
     "vue-tsc": "^3.0.0"
   }
 }
